@@ -1,3 +1,8 @@
+2007-07-31 Ladislav Hagara <hgr@vabo.cz>
+	* DETAILS: 2.0.0.6, SECURITY_PATCH=10
+	  http://www.mozilla.org/projects/security/known-vulnerabilities.html#firefox2.0.0.6
+	* firefox-config.patch: updated to 2.0.0.6
+
 2007-07-18 Ladislav Hagara <hgr@vabo.cz>
 	* DETAILS: 2.0.0.5, SECURITY_PATCH=9
 	  http://www.mozilla.org/projects/security/known-vulnerabilities.html#firefox2.0.0.5
